# otus_homework_07_cmd

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: release.yml
test_files/: commands.txt
